[gd_scene load_steps=15 format=3 uid="uid://biamoybuc33ng"]

[ext_resource type="Script" path="res://Scripts/enemyPrefab.gd" id="1_vh1f7"]
[ext_resource type="Texture2D" uid="uid://br78eg8f415t5" path="res://Sprite/EnemyBug/BugEnemy.png" id="2_x7wx0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_etq8c"]
size = Vector2(20, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmmd0"]
atlas = ExtResource("2_x7wx0")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv53v"]
atlas = ExtResource("2_x7wx0")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wj5rk"]
atlas = ExtResource("2_x7wx0")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nl2kt"]
atlas = ExtResource("2_x7wx0")
region = Rect2(96, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_81clx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmmd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv53v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wj5rk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nl2kt")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pstl5"]
size = Vector2(192, 115)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4k703"]
size = Vector2(20, 28)

[sub_resource type="Animation" id="Animation_lnnwp"]
resource_name = "Damaged"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.996078, 0, 0, 1), Color(1, 1, 1, 1), Color(0.996078, 0, 0, 1), Color(1, 1, 1, 1), Color(0.996078, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7h6nt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cfwum"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 0.705882), Color(1, 0, 0, 1), Color(1, 1, 1, 0.392157), Color(1, 0, 0, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lhyqe"]
_data = {
"Damaged": SubResource("Animation_lnnwp"),
"RESET": SubResource("Animation_7h6nt"),
"death": SubResource("Animation_cfwum")
}

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_vh1f7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_etq8c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_81clx")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, -41.5)
shape = SubResource("RectangleShape2D_pstl5")
debug_color = Color(0.996078, 0, 0.215686, 0.419608)

[node name="BulletAndArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletAndArea"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_4k703")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lhyqe")
}

[connection signal="area_entered" from="DetectionArea" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="BulletAndArea" to="." method="_on_bullet_and_area_area_entered"]
